tests/NormalTests/paczka1/small_fuzzy/46204319.err
Error in line 10: vSooVnzkQ A443 67,5
Error in line 13: A757 S29 56,2
Error in line 14: bNMxdFQIq A8 0,5
